fix yml file for new branch

--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -2,7 +2,7 @@ name: Python Tests
 
 on:
   push:
-    branches: [main, develop, feature/citesting]  
+    branches: [main, develop, feature/ciG9]  
   pull_request:
     branches: [develop, main]
 
