--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Find Changed Files
         shell: pwsh
         run: |
-          $CHANGED_FILES = git diff --name-only HEAD~1 HEAD
-          Write-Host "Changed files:"
+          $CHANGED_FILES = git diff --name-only HEAD~1 HEAD | Where-Object { $_ -like "*.py" }
+          Write-Host "Changed Python files:"
           Write-Host $CHANGED_FILES
           echo "changed_files=$CHANGED_FILES" >> $env:GITHUB_ENV
 
